<resources>

    <string name="app_name">Radhe</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_favorites">Favorites</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">radhekrishnabhakti.deepakvadgama.com</string>
    <string name="content_authority" translatable="false">com.deepakvadgama.radhekrishnabhakti.app</string>
    <string name="server_client_id" translatable="false">9983882915-45gqc5hr3fln53bj8psu01hvbpqh0buu.apps.googleusercontent.com</string>

    <!-- Preferences -->
    <string name="pref_user_email" translatable="false">EMAIL</string>
    <string name="pref_user_name" translatable="false">USERNAME</string>
    <string name="pref_user_url" translatable="false">PROFILE_URL</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_last_notification" translatable="false">last_notification</string>
    <string name="pref_favorites_updated" translatable="false">pref_favorites_updated</string>
    <string name="pref_favorites_added" translatable="false">pref_favorites_added</string>
    <string name="pref_favorites_removed" translatable="false">pref_favorites_removed</string>
    <string name="image_cd">Image</string>
    <string name="share_button_cd">Share button</string>
    <string name="action_share">share</string>
    <string name="action_settings">Settings</string>
    <string name="favorites">favorites</string>

    <string name="share_authority" translatable="false">com.deepakvadgama.radhekrishnabhakti.app.shareprovider</string>
    <string name="suggest_authority" translatable="false">com.deepakvadgama.radhekrishnabhakti.app.SuggestionProvider</string>
    <string name="search_hint">Enter Search query</string>
    <string name="app_label">Radhe Krishna</string>
    <string name="search">Search</string>
    <string name="title_search">Search Results..</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Data Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Show Notificatons</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sync_frequency">sync_frequency</string>
    <string name="notifications_ringtone">notification_ring_tone</string>
    <string name="add_widget">Add widget</string>
    <string name="last_quote_id">last_quote_id</string>
    <string name="application_launcher_image">Application Launcher Image</string>
    <string name="pick_account">Please select account for storing Favorites</string>
    <string name="cd_youtube_play_button">YouTube Play button</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="mail_to" translatable="false">mailto: neo.1260+radhe-feedback@gmail.com</string>
    <string name="email_subject">Radhe Android App Feedback</string>
    <string name="about_us_info">This app is for all people who want to progress spiritually by doing bhakti (devotion) to Radhe Krishna. \n\nAll saints have given a single message of loving God. But attaching the mind to the Divine is difficult. We are always busy and stressed in this material world performing our duties and the knowledge of this spiritual path is dispersed and sometimes confusing. This app will provide you with clear understanding of path of love. It will help you increase your attachment to God by telling you about God’s engrossing tales known as leelas. It will inspire you with quotes of saints and will help you practice devotion by participating in chantings.</string>
    <string name="cd_application_logo_image">Application Logo Image</string>
    <string name="about_page_image_url">https://storage.googleapis.com/radhekrishna/radha-krishna-love.jpg</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_widget">Spiritual Quotes</string>
    <string name="empty_list">No items found</string>
    <string name="no_favorites_string">"No Favorites added yet. "</string>
    <string name="no_search_results_string">No Search results found. \nTry with a different query (eg: Quotes).</string>
    <string name="internet_not_working_string">Internet not working. \nPlease check your connection and try again</string>
    <string name="connection_to_server_failed_string">Unable to fetch data. \nPlease try again later.</string>
    <string name="cd_alert_image">Alert Image</string>
    <string name="cd_like_button">Like button</string>
    <string name="cd_unlike_button">Remove like button</string>
    <string name="added_to_favorites">" added to favorites"</string>
    <string name="removed_from_favorites">" removed from favorites"</string>
    <string name="image_of">"Image of "</string>
</resources>
