<android.support.v7.widget.CardView android:id="@+id/card_view"
                                    xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:descendantFocusability="blocksDescendants"
                                    card_view:cardCornerRadius="10dp"
                                    card_view:cardElevation="5dp"
                                    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="8dp"
            android:textColor="#222"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Krishna"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/image_cd"
                android:scaleType="centerCrop"
                android:visibility="visible"
                tools:src="@mipmap/krishna"/>

            <ImageView
                android:id="@+id/playImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@mipmap/youtube_play"
                android:visibility="visible"
                android:contentDescription="@string/cd_youtube_play_button"/>

        </FrameLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="3"
            android:padding="8dp"
            android:textColor="#666"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="Somme text to display"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.like.LikeButton
                android:id="@+id/save"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                app:icon_size="20dp"
                app:icon_type="heart"/>

            <ImageButton
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share_button_cd"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:src="@drawable/ic_share_black_24dp"
                android:textSize="24sp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>